--- a/index.html
+++ b/index.html
@@ -10,11 +10,35 @@
     <div>
         <p>Twój Oryginalny Prezent</p>
         <ul>
-            <li><a href="#">E-sklep</a></li>
-            <li><a href="#">KOLEKCJE</a></li>
-            <li><a href="#">INSPIRACJE</a></li>
-            <li><a href="#">KONTAKT</a></li>
+            <li><a href="#">About us</a></li>
+            <li><a href="#">Skils</a></li>
+            <li><a href="#">Portfolio</a></li>
+            <li><a href="#">Contact</a></li>
         </ul>
     </div>
+    <section>
+        <h1>About us</h1>
+        <h2>We are</h2>
+        <p>Lorem ipsum dolor sit amet.</p>
+
+    </section>
+    <section>
+        <h2>Skils</h2>
+        <div class="skill">
+            <h2>Lorem</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos, aperiam.</p>
+        </div>
+        <div class="skill">
+            <h2>Lorem</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta, soluta?</p>
+        </div>
+        <div class="skill">
+            <h2>Lorem</h2></div>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic, amet!</p>
+        <div class="skill">
+            <h2>Lorem</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, velit.</p>
+        </div>
+    </section>
 </body>
 </html>
