--- a/index.html
+++ b/index.html
@@ -40,5 +40,19 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, velit.</p>
         </div>
     </section>
+
+    <section>
+        <h2>portfolio</h2>
+        <div class="portfolio-item">
+            <img src="img/8.jpg" alt="">
+        </div>
+        <div class="portfolio-item">
+            <img src="img/e-manufaktura-dek-149.jpg" alt="">
+        </div>
+        <div class="portfolio-item">
+            <img src="img/e-manufaktura-dek41.jpg" alt="">
+        </div>
+    
+    </section>
 </body>
 </html>
