--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <div>
         <p>Twój Oryginalny Prezent</p>
@@ -33,8 +35,9 @@
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta, soluta?</p>
         </div>
         <div class="skill">
-            <h2>Lorem</h2></div>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic, amet!</p>
+            <h2>Lorem</h2>
+        </div>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic, amet!</p>
         <div class="skill">
             <h2>Lorem</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, velit.</p>
@@ -52,7 +55,21 @@
         <div class="portfolio-item">
             <img src="img/e-manufaktura-dek41.jpg" alt="">
         </div>
-    
+
     </section>
+    <section>
+        <h2>Contact</h2>
+        <h2>Formularz kontaktowy</h2>
+
+        <form action="/action_page.php">
+            <label for="fname">Imię:</label><br>
+            <input type="text" id="fname" name="fname"><br>
+            <label for="lname">Nazwisko:</label><br>
+            <input type="text" id="lname" name="lname"><br><br>
+            <input type="submit" value="Wyślij">
+        </form>
+    </section>
+  
 </body>
+
 </html>
