--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 
 <head>
     <meta charset="UTF-8">
@@ -12,8 +12,8 @@
     <nav>
         <p>Twój Oryginalny Prezent</p>
         <ul>
-            <li><a href="#abot">About us</a></li>
-            <li><a href="#skils">Skils</a></li>
+            <li><a href="#about">About us</a></li>
+            <li><a href="#skills">Skills</a></li>
             <li><a href="#portfolio">Portfolio</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
@@ -24,8 +24,9 @@
         <p>Lorem ipsum dolor sit amet.</p>
 
     </section>
-    <section id="skils">
-        <h2>Skils</h2>
+    <section id="skills">
+        <h2>Skills</h2>
+        
         <div class="skill">
             <h3>Lorem</h3>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos, aperiam.</p>
@@ -36,8 +37,9 @@
         </div>
         <div class="skill">
             <h2>Lorem</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic, amet!</p>
         </div>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic, amet!</p>
+
         <div class="skill">
             <h2>Lorem</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, velit.</p>
@@ -45,23 +47,26 @@
     </section>
 
     <section id="portfolio">
+
         <h2>portfolio</h2>
+
         <div class="portfolio-item">
-            <img src="img/8.jpg" alt="">
+            <img src="img/8.jpg" alt="Dekoracja klasyczna">
         </div>
         <div class="portfolio-item">
-            <img src="img/e-manufaktura-dek-149.jpg" alt="">
+            <img src="img/e-manufaktura-dek-149.jpg" alt="Dekoracja unikatowa">
         </div>
         <div class="portfolio-item">
-            <img src="img/e-manufaktura-dek41.jpg" alt="">
+            <img src="img/e-manufaktura-dek41.jpg" alt="Dekoracja artystyczna">
         </div>
 
     </section>
     <section id="contact">
         <h2>Contact</h2>
         <h2>Agnieszka Orłowska</h2>
+
         <address>
-             <p>condratowicza 7</p>
+            <p>Kondratowicza 7</p>
         </address>
 
         <form action="/action_page.php">
@@ -72,7 +77,7 @@
             <input type="submit" value="Wyślij">
         </form>
     </section>
-  
+
 </body>
 
 </html>
